# GlenEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.cache/clangd/index/: Editor.cpp.38269259CEBA8815.idx  Editor.h.91B2A1D7BFC70E16.idx  Engine.cpp.73577D5B1D05A960.idx  Engine.h.1FB860377D7FA09D.idx  GlenEngineAPI.h.82F2A7AA52719F38.idx  context.c.F44C23F7EFC315E9.idx  egl_context.c.507393C8D7FB262B.idx  glfw3.h.C3A58952B9419E29.idx  glfw3native.h.440BD71C1F055648.idx  glx_context.c.96DBA9C5A55915FD.idx  imconfig.h.9F23BC9DD7FC209C.idx  imgui.cpp.E93FE0DD326DE7A9.idx  imgui.h.09D15BE9D32BF308.idx  imgui_demo.cpp.AD9A7E4F70E8F089.idx  imgui_draw.cpp.A84AB6B0FE584535.idx  imgui_impl_glfw.cpp.3AF2C9DA8CDA085D.idx  imgui_impl_glfw.h.58851773761A85D0.idx  imgui_impl_opengl3.cpp.4115ED27951BD859.idx  imgui_impl_opengl3.h.A8941C52A2F8F8AB.idx  imgui_impl_opengl3_loader.h.2A766764562B951A.idx  imgui_internal.h.51F50D1D7F212FD2.idx  imgui_tables.cpp.438E2CC1B8452C90.idx  imgui_widgets.cpp.BD4F1689F77285EB.idx  imstb_rectpack.h.0E93F05F7C71B753.idx  imstb_textedit.h.52A02FB2673D447E.idx  imstb_truetype.h.7CB69293881FE225.idx  init.c.5585FA495183C545.idx  input.c.F00AA432FAA8B338.idx  internal.h.5A2E2E0063FC0882.idx  linux_joystick.c.07C40F4092EAB3C9.idx  linux_joystick.h.72559A22AA66F12F.idx  main.cpp.B0DD71B8BE36BFD7.idx  mappings.h.963022EA9CCA8E02.idx  monitor.c.519905A66C7EB963.idx  null_init.c.308658E034F2F2FA.idx  null_joystick.c.2C8379962CFF7802.idx  null_joystick.h.3B866F9121170D45.idx  null_monitor.c.9DF26C102DFDF898.idx  null_platform.h.47CE99CA269378ED.idx  null_window.c.68DDF7821E2A8772.idx  (+22 more)
Examples/: CMakeLists.txt
Examples/EditorApp/: CMakeLists.txt  main.cpp
GlenEditor/: CMakeLists.txt
GlenEditor/private/include/GlenEditor/WindowManager/: WindowManager.h
GlenEditor/private/src/Editor/: Editor.cpp
GlenEditor/private/src/WindowManager/: WindowManager.cpp
GlenEditor/public/GlenEditor/Editor/: Editor.h
GlenEngine/: CMakeLists.txt
GlenEngine/private/src/Engine/: Engine.cpp
GlenEngine/public/GlenEngine/: GlenEngineAPI.h
GlenEngine/public/GlenEngine/Engine/: Engine.h
cmake/: Debug.cmake  SpdLog.cmake
